fix top margin error on mobile view and page height issue on tablet view

--- a/src/components/AnimatedTitle.css
+++ b/src/components/AnimatedTitle.css
@@ -122,3 +122,9 @@
     transition: all 0.2s ease-out;
   }
 }
+
+@media screen and (min-height: 1000px) {
+  .animated-title {
+    margin-top: -150px;
+  }
+}
